# conan-project-template

./: .gitignore  LICENSE  README.md  project_generator.py
.github/workflows/: ci.yml
templates/app/: CMakeLists.txt  README.md  conanfile.py
templates/app/xxx/: CMakeLists.txt
templates/app/xxx/include/: main.hpp  version.hpp
templates/app/xxx/js/: CommonUtils.js
templates/app/xxx/qml/: MyButton.qml  MyMainWindow.qml
templates/app/xxx/src/: main_exe.cpp  main_lib.cpp
templates/app/xxx/test/: CMakeLists.txt  sample_test.cpp
templates/lib/: CMakeLists.txt  README.md  conanfile.py
templates/lib/test_package/: CMakeLists.txt  conanfile.py  example.cpp
templates/lib/xxx/: CMakeLists.txt
templates/lib/xxx/cmake/: lib-config.cmake.in
templates/lib/xxx/include/: pub.hpp  version.hpp
templates/lib/xxx/include/impl/: helpers.hpp
templates/lib/xxx/src/: pub.cpp
templates/lib/xxx/src/impl/: helpers.cpp
templates/lib/xxx/test/: CMakeLists.txt  pub.cpp
templates/lib/xxx/test/impl/: helpers.cpp
